# Engine

./: .gitignore  CMakeLists.txt  CMake_GCC_x86.cmake  CMake_LLVMRV_tsubasa.cmake  CMake_LLVM_tsubasa.cmake  CMake_LLVM_tsubasa_toolchain.cmake  CMake_NCC_tsubasa.cmake  CMake_NCC_tsubasa_toolchain.cmake  Docker.README  Dockerfile.template  Makefile  README.md  build.sh  doxy.sh  micro_benchmark_1_scalar_results.txt  run.py  run.sh  sudo.test.sh
src/DA_bitmap_IR/: CMakeLists.txt  micro_benchmark_1_asc_scalar.cpp  micro_benchmark_1_uniform_avx2.cpp  micro_benchmark_1_uniform_avx512.cpp  micro_benchmark_1_uniform_scalar.cpp  micro_benchmark_2_scalar.cpp  micro_benchmark_2_uniform_scalar.cpp  micro_benchmark_2_uniform_scalar_decompr.cpp  micro_benchmark_3_uniform_sorted_unique_scalar.cpp  micro_benchmark_3_uniform_sorted_unique_vectorized.cpp  micro_benchmark_4_uniform_sorted_unique_avx2.cpp  micro_benchmark_4_uniform_sorted_unique_avx512.cpp  micro_benchmark_4_uniform_sorted_unique_scalar.cpp  micro_benchmark_5_uniform_avx2.cpp  micro_benchmark_5_uniform_avx512.cpp  micro_benchmark_5_uniform_scalar.cpp
src/benchmark_tsubasa/: CMakeLists.txt  benchmark_agg_sum.h  benchmark_project.cpp  benchmark_project.h  benchmark_util.h  benchmarks.cpp  scalable_agg_sum.cpp  scalable_project.cpp  time_tsubasa.h
src/calibration/: CMakeLists.txt  bw_prof.cpp  bw_prof_casc.cpp  const_prof.cpp  uncompr.cpp
src/examples/: CMakeLists.txt  agg_sum_example.cpp  basic.cpp  example_query.cpp  frame.cpp  frame0.cpp  frame_sl.cpp  frame_ssb.cpp  group_binary_vectorized_test.cpp  group_by_test.cpp  select_sum_query.cpp  select_sum_query_bm.cpp  select_variants_microbenchmark.cpp  set_extract_query.cpp  smaller_ten_query.cpp  smaller_ten_query_SIMD.cpp  superoperator_example.cpp  test_primitives_query.cpp  test_type_packing.cpp  variant_executor_usage.cpp
src/microbenchmarks/: CMakeLists.txt  agg_sum_benchmark.cpp  calc_binary_benchmark.cpp  column_compress_benchmark.cpp  compression_data_benchmark.cpp  group_binary_benchmark.cpp  group_unary_benchmark.cpp  inc_benchmark.cpp  iterator_variants.cpp  join_benchmark.cpp  merge_benchmark.cpp  otf_morphing_example_1.cpp  project_benchmark.cpp  select_benchmark.cpp  select_benchmark_2.cpp  select_sum_benchmark.cpp  select_uncompr.cpp  semi_join_benchmark.cpp
src/microbenchmarks/datagen/: column_gen.cpp
src/microbenchmarks/graph/: CMakeLists.txt  adjList_graph_compression_benchmark.cpp  benchmark_helper.h  bfs_benchmark.cpp  bfs_csr_partial_compression_benchmark.cpp  csr_graph_compression_benchmark.cpp  edge_storage_benchmark.cpp  page_rank_benchmark.cpp  page_rank_csr_partial_compression_benchmark.cpp  vertex_storage_benchmark.cpp
src/parallelization/: CMakeLists.txt  meta_operator_prototype_test.cpp  overhead_benchmark_meta_operator.cpp  virtual_vector_query.cpp  virtual_vector_template_test.cpp
test/: CMakeLists.txt  Makefile
test/apps/: CMakeLists.txt  operator.cpp
test/core/: CMakeLists.txt
test/core/memory/: CMakeLists.txt  memory_test.cpp  mmap_test.cpp
test/core/morphing/: CMakeLists.txt  IR_transformation_compr_test.cpp  IR_transformation_uncompr_test.cpp  bm_compr_test.cpp  delta_test.cpp  dynamic_vbp_test.cpp  group_simple_test.cpp  k_wise_ns_test.cpp  morph_column_block_test.cpp  morph_saving_offsets_test.cpp  morphing_test.cpp  pl_compr_test.cpp  static_vbp_test.cpp  vbp_test.cpp  wah_bm_test.cpp  write_iterator_IR_bm_test.cpp  write_iterator_IR_pl_test.cpp  write_iterator_IR_wah_compr_test.cpp
test/core/morphing/DA_bitmap_IR/: pl_compr_test.cpp  write_iterator_IR_wah_compr_test.cpp
test/core/operators/: CMakeLists.txt  agg_sum_group_based_test.cpp  agg_sum_test.cpp  agg_sum_whole_column_test.cpp  calc_binary_test.cpp  calc_unary_test.cpp  group_binary_test.cpp  group_binary_vectorized_test.cpp  group_test.cpp  group_unary_nec_test.cpp  group_unary_test.cpp  group_unary_vectorized_test.cpp  intersect_bm_test.cpp  intersect_test.cpp  join_test.cpp  left_semi_nto1_nested_loop_join_test.cpp  lookup_test.cpp  merge_bm_test.cpp  merge_test.cpp  operator_test.cpp  operator_test_frames.h  project_benchmark_test.cpp  project_bm_pl_test.cpp  project_bm_test.cpp  project_pl_test.cpp  project_test.cpp  random_access_test.cpp  select_nec_test.cpp  select_pl_test.cpp  select_test.cpp  select_test_old.cpp  summation_test.cpp  vector_test.cpp
test/core/operators/DA_bitmap_IR/: select_bm_test.cpp
test/core/operators/graph/ldbc/: CMakeLists.txt  bfs_ldbc_adj_graph_test.cpp  bfs_ldbc_csr_graph_test.cpp  bfs_ldbc_graph_test.h  page_rank_ldbc_graph_test.cpp
test/core/operators/graph/simple/: CMakeLists.txt  bfs_simple_adj_graph_test.cpp  (+4 more)
test/core/persistence/: CMakeLists.txt  binary_io_test.cpp
test/core/storage/: CMakeLists.txt  PartitionedColumn_unittest.cpp  column_gen_test.cpp  storage_test.cpp
test/core/storage/graph/: CMakeLists.txt  generate_ldbc_graph.cpp  generate_ldbc_graph_adj_list.cpp
test/core/utils/: CMakeLists.txt  printing_test.cpp
test/core/virtual/: CMakeLists.txt  Executor_test.cpp  compileTest.cpp  compileTest.h  partitioning_test.cpp  threading_test.cpp
test/graph/: CMakeLists.txt  generate_ldbc_graph.cpp
test/vector/: CMakeLists.txt  main.cpp
test/vector/operators/: agg_sum_whole_column_benchmark_test.cpp  agg_sum_whole_column_test.cpp  calc_test.cpp  equi_join_test.cpp  group_binary_test.cpp  group_test.cpp  group_unary_test.cpp  hash_set_test.cpp  intersect_bm_test.cpp  intersect_test.cpp  merge_test.cpp  my_operator.cpp  my_operator.h  project_pl_compr_test.cpp  project_pl_uncompr_test.cpp  project_test.cpp  select_bm_compr_test.cpp  select_bm_uncompr_test.cpp  select_pl_compr_test.cpp  select_pl_uncompr_test.cpp  select_sum_query_bm_SIMD.cpp  select_test.cpp  semi_join_test.cpp  simple_query_bm_pl_compr_test.cpp
test/vector/operators/DA_bitmap_IR/: intersect_bm_test.cpp  merge_bm_test.cpp  micro_benchmark_1_asc_scalar.cpp  micro_benchmark_1_scalar.cpp  micro_benchmark_1_uniform_scalar.cpp  project_bm_uncompr_test.cpp  project_pl_compr_test.cpp  project_pl_uncompr_test.cpp  select_sum_query_bm_SIMD.cpp
(+632 files in other folders)
