add_subdirectory( core/memory )
add_subdirectory( core/morphing )
add_subdirectory( core/operators )
add_subdirectory( core/persistence )
add_subdirectory( core/storage )
add_subdirectory( core/utils )

add_subdirectory( core/storage/graph/simple )
add_subdirectory( core/storage/graph/ldbc )
add_subdirectory( core/operators/graph/ldbc )

add_subdirectory(vector)
